--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lhncbc/ucum-lhc",
-  "version": "2.3.3",
+  "version": "2.3.4",
   "description": "Implements Unified Code for Units of Measure (UCUM) functions in a javascript library",
   "main": "dist/ucum-lhc.js",
   "homepage": "https://lhncbc.github.io/ucum-lhc/",
@@ -25,6 +25,7 @@
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
     "escape-html": "^1.0.3",
+    "growl": "^1.10.5",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
@@ -43,6 +44,7 @@
     "nsp": "^2.8.1",
     "path": "^0.12.7",
     "protractor": "^5.3.1",
+    "semver": "^5.5.0",
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.2",
     "ssi": "^0.3.0",
@@ -60,5 +62,6 @@
     "type": "git",
     "url": "https://github.com/lhncbc/ucum-lhc"
   },
-  "license": "SEE LICENSE IN LICENSE.md"
+  "license": "SEE LICENSE IN LICENSE.md",
+  "dependencies": {}
 }
