--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "bootstrap": "^4.1.3",
     "bower": "^1.7.9",
     "browserify": "^16.1.1",
-    "browserify-fs": "^1.0.0",
+    "browserify-fs": "https://github.com/eight04/browserify-fs#eb6645531326de3",
     "connect": "^3.6.6",
     "csv": "^1.1.0",
     "csv-parse": "^1.1.7",
     "csv-stringify": "^1.0.4",
     "escape-html": "^1.0.3",
     "growl": "^1.10.5",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.3",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
     "grunt-cli": "^1.2.0",
@@ -35,17 +35,15 @@
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
-    "grunt-nsp": "^2.3.1",
     "grunt-protractor-runner": "^5.0.0",
     "grunt-wiredep": "^3.0.1",
     "is-integer": "^1.0.6",
     "jit-grunt": "^0.10.0",
     "jsonfile": "^2.2.3",
-    "mocha": "^2.5.3",
-    "nsp": "^2.8.1",
+    "mocha": "^5.2.0",
     "path": "^0.12.7",
     "protractor": "^5.3.1",
-    "semver": "^5.5.0",
+    "semver": "^5.5.1",
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.2",
     "ssi": "^0.3.0",
